--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,22 +8,30 @@ services:
     ports:
       - 3000:3000
 
-  backend: 
-    depends_on: 
+  backend:
+    depends_on:
       - db
     build: ./backend
-    ports: 
-      - 3001:3001
-    environment: 
-      DB_URL: mongodb://db/vidly
-    command: ./docker-entrypoint.sh
+    env_file:
+      - ./backend/.env
+    ports:
+      - "8000:8000"
 
   db:
     image: mongo:4.0-xenial
     ports:
       - 27017:27017
     volumes:
-      - vidly:/data/db
+      - db_data:/data/db
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - backend
 
 volumes:
-  vidly:
+  db_data:
