--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,24 +31,19 @@ jobs:
       run: echo "${{ secrets.GH_PAT }}" | docker login ghcr.io -u altinshabani1 --password-stdin
  
     - name: Build Docker Image
+    
+       run: |
+  
+         IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
 
-      run: |
+    # Check if this is a tag push (e.g., v1.0.0)
+         if [ "${{ github.ref_type }}" = "tag" ]; then
+           VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
+      docker build -f frontend/Dockerfile frontend --tag $IMAGE_TAG --tag $VERSION_TAG
+    else
+      docker build -f frontend/Dockerfile frontend --tag $IMAGE_TAG
+    fi
 
-        IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
-
-        # Check if this is a tag push (e.g., v1.0.0)
-
-        if [ "${{ github.ref_type }}" = "tag" ]; then
-
-          VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
-
-          docker build . --tag $IMAGE_TAG --tag $VERSION_TAG
-
-        else
-
-          docker build . --tag $IMAGE_TAG
-
-        fi
  
     - name: Push Docker Image
 
