--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,91 +1,55 @@
 name: Docker Image CI
- 
+
 on:
-
   push:
-
     branches: [ "main" ]
-
     tags:
+      - 'v*'  # Trigger for version tags like v1.0.0
+    # pull_request:
+    #   branches: [ "main" ]
 
-       - 'v*'  # Trigger for version tags like v1.0.0
-
-    #pull_request:
-
-     #branches: [ "main" ]
- 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
- 
+
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Checkout Repository
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.GH_PAT }}" | docker login ghcr.io -u altinshabani1 --password-stdin
 
-      uses: actions/checkout@v4
- 
-    - name: Log in to GitHub Container Registry
+      - name: Build Docker Image
+        run: |
+          IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
 
-      run: echo "${{ secrets.GH_PAT }}" | docker login ghcr.io -u altinshabani1 --password-stdin
- 
-    - name: Build Docker Image
-    
-       run: |
-  
-         IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
+          if [ "${{ github.ref_type }}" = "tag" ]; then
+            VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
+            docker build -f frontend/Dockerfile frontend --tag $IMAGE_TAG --tag $VERSION_TAG
+          else
+            docker build -f frontend/Dockerfile frontend --tag $IMAGE_TAG
+          fi
 
-    # Check if this is a tag push (e.g., v1.0.0)
-         if [ "${{ github.ref_type }}" = "tag" ]; then
-           VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
-      docker build -f frontend/Dockerfile frontend --tag $IMAGE_TAG --tag $VERSION_TAG
-    else
-      docker build -f frontend/Dockerfile frontend --tag $IMAGE_TAG
-    fi
+      - name: Push Docker Image
+        run: |
+          IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
 
- 
-    - name: Push Docker Image
+          docker push $IMAGE_TAG
 
-      run: |
+          if [ "${{ github.ref_type }}" = "tag" ]; then
+            VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
+            docker push $VERSION_TAG
+          fi
 
-        IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
-
-        # Push the SHA-tagged image
-
-        docker push $IMAGE_TAG
-
-        # If this is a version tag, push that too
-
-        if [ "${{ github.ref_type }}" = "tag" ]; then
-
-          VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
-
-          docker push $VERSION_TAG
-
-        fi
- 
-    - name: Notify via Email on Success
-
-      if: success()
-
-      uses: dawidd6/action-send-mail@v3
-
-      with:
-
-        server_address: smtp.gmail.com
-
-        server_port: 587
-
-        username: ${{ secrets.EMAIL_USERNAME }}
-
-        password: ${{ secrets.EMAIL_PASSWORD }}
-
-        subject: "Docker Build Success - SimpleNodeApp"
-
-        to: "enisimami@gmail.com"
-
-        from: "GitHub Actions"
-
-        body: "The DOCKER IMAGE for SimpleNodeApp has been successfully built and pushed to GitHub Packages."
- 
+      - name: Notify via Email on Success
+        if: success()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 587
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: "Docker Build Success - MiniSaaS"
+          to: "enisimami@gmail.com"
+          from: "GitHub Actions"
+          body: "The Docker image for MiniSaaS has been successfully built and pushed to GitHub Packages."
