--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,6 +43,15 @@ jobs:
       if: success()
       uses: appleboy/ssh-action@v1.0.0
       with:
+        run: |
+          if ! command -v docker &> /dev/null; then
+          echo "Docker not found, installing..."
+          sudo apt update
+          sudo apt install -y docker.io
+          sudo systemctl start docker
+          sudo usermod -aG docker $USER
+          fi
+
         host: ${{ secrets.SERVER_IP }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
