--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches: [ "main" ]
     tags:
-      - 'v*'  # Trigger on version tags like v1.0.0
+      - 'v*'  # version tags like v1.0.0
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -20,8 +20,6 @@ jobs:
     - name: Build Docker Image
       run: |
         IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
-
-        # Check if this is a tag push (e.g., v1.0.0)
         if [ "${{ github.ref_type }}" = "tag" ]; then
           VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
           docker build ./frontend --tag $IMAGE_TAG --tag $VERSION_TAG
@@ -33,35 +31,49 @@ jobs:
       run: |
         IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
         docker push $IMAGE_TAG
-
         if [ "${{ github.ref_type }}" = "tag" ]; then
           VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
           docker push $VERSION_TAG
         fi
 
-    - name: Deploy to Ubuntu Server via SSH
-      if: success()
-      uses: appleboy/ssh-action@v1.0.0
+    - name: Install Docker on Remote Server & Deploy Container
+      uses: appleboy/ssh-action@v1
       with:
-        host: ${{ secrets.SERVER_IP }}
-        username: ${{ secrets.SERVER_USER }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        run: |
-          if ! command -v docker &> /dev/null; then
-          echo "Docker not found, installing..."
-          sudo apt update
-          sudo apt install -y docker.io
-          sudo systemctl start docker
-          sudo usermod -aG docker $USER
-          fi
+        host: ${{ secrets.REMOTE_HOST }}
+        username: ${{ secrets.REMOTE_USER }}
+        key: ${{ secrets.REMOTE_SSH_KEY }}
         script: |
-          docker login ghcr.io -u altinshabani1 -p ${{ secrets.GH_PAT }}
-          docker pull ghcr.io/altinshabani1/mini-saas:${{ github.sha }}
+          # Install Docker if not installed
+          if ! command -v docker &> /dev/null
+          then
+            echo "Docker not found. Installing..."
+            sudo apt-get update
+            sudo apt-get install -y ca-certificates curl gnupg lsb-release
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+            sudo apt-get update
+            sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+            sudo usermod -aG docker $USER
+          else
+            echo "Docker already installed"
+          fi
 
+          # Login to GHCR (you'll need to put GH_PAT on the server or skip login if public)
+          echo "${{ secrets.GH_PAT }}" | docker login ghcr.io -u altinshabani1 --password-stdin
+
+          IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
+
+          # Pull image
+          docker pull $IMAGE_TAG
+
+          # Stop old container if running
           docker stop mini-saas || true
+
+          # Remove old container if exists
           docker rm mini-saas || true
 
-          docker run -d --name mini-saas -p 80:3000 ghcr.io/altinshabani1/mini-saas:${{ github.sha }}
+          # Run new container
+          docker run -d --name mini-saas -p 80:3000 $IMAGE_TAG
 
     - name: Notify via Email on Success
       if: success()
@@ -71,7 +83,7 @@ jobs:
         server_port: 587
         username: ${{ secrets.EMAIL_USERNAME }}
         password: ${{ secrets.EMAIL_PASSWORD }}
-        subject: "Docker Build & Deploy Success - Mini SaaS"
+        subject: "Docker Build Success - SimpleNodeApp"
         to: "enisimami@gmail.com"
         from: "GitHub Actions"
-        body: "The Docker image for Mini SaaS has been built, pushed, and deployed to the Ubuntu server successfully."
+        body: "The DOCKER IMAGE for SimpleNodeApp has been successfully built and deployed to your server."
