--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,36 +43,25 @@ jobs:
         username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.REMOTE_SSH_KEY }}
         script: |
-          # Install Docker if not installed
-          if ! command -v docker &> /dev/null
-          then
-            echo "Docker not found. Installing..."
+          if ! command -v docker &> /dev/null; then
+            echo "Installing Docker..."
             sudo apt-get update
             sudo apt-get install -y ca-certificates curl gnupg lsb-release
             curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] \
+              https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | \
+              sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
             sudo apt-get update
             sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-            sudo usermod -aG docker $USER
-          else
-            echo "Docker already installed"
           fi
 
-          # Login to GHCR (you'll need to put GH_PAT on the server or skip login if public)
           echo "${{ secrets.GH_PAT }}" | docker login ghcr.io -u altinshabani1 --password-stdin
 
           IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
-
-          # Pull image
           docker pull $IMAGE_TAG
 
-          # Stop old container if running
           docker stop mini-saas || true
-
-          # Remove old container if exists
           docker rm mini-saas || true
-
-          # Run new container
           docker run -d --name mini-saas -p 80:3000 $IMAGE_TAG
 
     - name: Notify via Email on Success
@@ -83,7 +72,9 @@ jobs:
         server_port: 587
         username: ${{ secrets.EMAIL_USERNAME }}
         password: ${{ secrets.EMAIL_PASSWORD }}
-        subject: "Docker Build Success - SimpleNodeApp"
+        subject: "✅ Docker Build Success - MiniSaaS"
         to: "enisimami@gmail.com"
-        from: "GitHub Actions"
-        body: "The DOCKER IMAGE for SimpleNodeApp has been successfully built and deployed to your server."
+        from: "GitHub Actions <${{ secrets.EMAIL_USERNAME }}>"
+        body: |
+          ✅ Docker build and deployment for Mini-SaaS succeeded!
+          Commit: ${{ github.sha }}
