--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
     tags:
-      - 'v*'  # version tags like v1.0.0
+      - 'v*'
 
 jobs:
   build:
@@ -36,12 +36,12 @@ jobs:
           docker push $VERSION_TAG
         fi
 
-    - name: Install Docker on Remote Server & Deploy Container
+    - name: Deploy to Remote Server
       uses: appleboy/ssh-action@v1
       with:
-        host: ${{ secrets.REMOTE_HOST }}
-        username: ${{ secrets.REMOTE_USER }}
-        key: ${{ secrets.REMOTE_SSH_KEY }}
+        host: ${{ secrets.SERVER_IP }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           if ! command -v docker &> /dev/null; then
             echo "Installing Docker..."
@@ -59,7 +59,6 @@ jobs:
 
           IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
           docker pull $IMAGE_TAG
-
           docker stop mini-saas || true
           docker rm mini-saas || true
           docker run -d --name mini-saas -p 80:3000 $IMAGE_TAG
@@ -72,9 +71,8 @@ jobs:
         server_port: 587
         username: ${{ secrets.EMAIL_USERNAME }}
         password: ${{ secrets.EMAIL_PASSWORD }}
-        subject: "✅ Docker Build Success - MiniSaaS"
-        to: "enisimami@gmail.com"
-        from: "GitHub Actions <${{ secrets.EMAIL_USERNAME }}>"
+        subject: "✅ Mini-SaaS Deploy Successful"
+        to: enisimami@gmail.com
+        from: GitHub Actions
         body: |
-          ✅ Docker build and deployment for Mini-SaaS succeeded!
-          Commit: ${{ github.sha }}
+          Mini-SaaS Docker container was deployed to the remote server successfully.
