--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,3 +1,41 @@
+name: Docker Image CI
+
+on:
+  push:
+    branches: [ "main" ]
+    tags:
+      - 'v*'  # version tags like v1.0.0
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+
+    - name: Log in to GitHub Container Registry
+      run: echo "${{ secrets.GH_PAT }}" | docker login ghcr.io -u altinshabani1 --password-stdin
+
+    - name: Build Docker Image
+      run: |
+        IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
+        if [ "${{ github.ref_type }}" = "tag" ]; then
+          VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
+          docker build ./frontend --tag $IMAGE_TAG --tag $VERSION_TAG
+        else
+          docker build ./frontend --tag $IMAGE_TAG
+        fi
+
+    - name: Push Docker Image
+      run: |
+        IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
+        docker push $IMAGE_TAG
+        if [ "${{ github.ref_type }}" = "tag" ]; then
+          VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
+          docker push $VERSION_TAG
+        fi
+
     - name: Deploy to Remote Server
       uses: appleboy/ssh-action@v1
       with:
@@ -24,3 +62,16 @@
           sudo docker stop mini-saas || true
           sudo docker rm mini-saas || true
           sudo docker run -d --name mini-saas -p 80:3000 $IMAGE_TAG
+
+    - name: Notify via Email on Success
+      if: success()
+      uses: dawidd6/action-send-mail@v3
+      with:
+        server_address: smtp.gmail.com
+        server_port: 587
+        username: ${{ secrets.EMAIL_USERNAME }}
+        password: ${{ secrets.EMAIL_PASSWORD }}
+        subject: "✅ Deployment Success - mini-saas"
+        to: "enisimami@gmail.com"
+        from: "GitHub Actions"
+        body: "The Docker image for mini-saas has been successfully built and deployed to your server."
