Resolved merge conflicts in backend/Dockerfile and docker-compose.yml

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,3 @@
-DATABASE_URL=postgres://minisaas:12345678@postgres:5432/postdb
+DATABASE_URL=postgresql://minisaas:12345678@postgres:5432/minisaas
 SECRET_KEY=super-secret-dev-key
 PORT=8000
-
