--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ events { worker_connections 1024; }
 
 http {
     upstream backend {
-        server backend:8000;  # <-- Use the exact docker-compose service name "backend"
+        server backend:8000;
     }
 
     server {
@@ -20,13 +20,9 @@ http {
         }
 
         location / {
-            # Assuming frontend is served separately or via nginx static files
-            proxy_pass http://frontend:3000/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri /index.html;
         }
     }
 }
