--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -14,6 +14,7 @@ scrape_configs:
     static_configs:
       - targets: ['postgres_exporter:9187']
 
-  - job_name: 'backend'
-    static_configs:
-      - targets: ['backend:8000']
+#  - job_name: 'backend'
+#    static_configs:
+#      - targets: ['backend:8000']
+
