--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,3 @@
-
 name: Docker Image CI
 
 on:
@@ -25,8 +24,9 @@ jobs:
           VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
           docker build ./frontend --tag $IMAGE_TAG --tag $VERSION_TAG
         else
-          docker build ./frontend --tag $IMAGE_TAG
+          docker build ./frontend --tag $IMAGE_TAG --tag ghcr.io/altinshabani1/mini-saas:latest
         fi
+
     - name: Push Docker Image
       run: |
         IMAGE_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.sha }}"
@@ -34,7 +34,10 @@ jobs:
         if [ "${{ github.ref_type }}" = "tag" ]; then
           VERSION_TAG="ghcr.io/altinshabani1/mini-saas:${{ github.ref_name }}"
           docker push $VERSION_TAG
+        else
+          docker push ghcr.io/altinshabani1/mini-saas:latest
         fi
+
     - name: Deploy to Remote Server
       uses: appleboy/ssh-action@v1
       with:
@@ -47,9 +50,7 @@ jobs:
             sudo apt-get update
             sudo apt-get install -y ca-certificates curl gnupg lsb-release
             curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] \
-              https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | \
-              sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
             sudo apt-get update
             sudo apt-get install -y docker-ce docker-ce-cli containerd.io
           fi
@@ -59,6 +60,7 @@ jobs:
           sudo docker stop mini-saas || true
           sudo docker rm mini-saas || true
           sudo docker run -d --name mini-saas -p 80:3000 $IMAGE_TAG
+
     - name: Notify via Email on Success
       if: success()
       uses: dawidd6/action-send-mail@v3
